--- a/week2/events_demo/res/layout/main.xml
+++ b/week2/events_demo/res/layout/main.xml
@@ -4,6 +4,13 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
+
+    <EditText
+            android:id="@+id/tv_greet"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
     <Button
             android:id="@+id/btn_greet"
             android:layout_width="fill_parent"
