--- a/projects/todoapp/res/layout/task_details.xml
+++ b/projects/todoapp/res/layout/task_details.xml
@@ -6,6 +6,6 @@
               android:layout_height="match_parent">
     <TextView
             android:id="@+id/tv_task_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            style="@style/FullWidthWrapStyle"
+            />
 </LinearLayout>
