--- a/projects/todoapp/res/layout/task_list_item_layout.xml
+++ b/projects/todoapp/res/layout/task_list_item_layout.xml
@@ -6,9 +6,6 @@
               android:layout_height="match_parent">
     <TextView
             android:id="@+id/tv_task_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:textSize="21sp"
+            style="@style/TaskItemStyle"
             />
 </LinearLayout>
