convertir respuesta de API a objetos a través de JsonObject
mostrar resultado en una vista de lista

--- a/week4/http101/res/layout/main.xml
+++ b/week4/http101/res/layout/main.xml
@@ -1,50 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        >
+
     <LinearLayout
-                  android:orientation="vertical"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             >
 
-        <LinearLayout
-                android:layout_width="match_parent"
+        <Button
+                android:id="@+id/btn_httpclient"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:layout_weight="1"
+                android:text="@string/http_client"
+                />
 
-            <Button
-                    android:id="@+id/btn_httpclient"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/http_client"
-                    />
-
-            <Button
-                    android:id="@+id/btn_okhttp"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/ok_http"
-                    />
-
-            <Button
-                    android:id="@+id/btn_volley"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/volley"
-                    />
-        </LinearLayout>
-
-        <TextView
-                android:id="@+id/tv_result"
-                android:layout_width="fill_parent"
+        <Button
+                android:id="@+id/btn_okhttp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
+                android:layout_weight="1"
+                android:text="@string/ok_http"
+                />
+
+        <Button
+                android:id="@+id/btn_volley"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/volley"
                 />
     </LinearLayout>
-</ScrollView>
 
+    <ListView
+            android:id="@+id/lv_data"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+</LinearLayout>
